k3s/demo/echo-header-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-header
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: echo-header
