k3s/demo/default_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /test
        backend:
          serviceName: echo-header
          servicePort: 8080
