k3s/demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: test-k3s.gllue.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
